Audio files have been uploaded and C sound has been connected to C button.

--- a/XylophoneApp/Base.lproj/Main.storyboard
+++ b/XylophoneApp/Base.lproj/Main.storyboard
@@ -31,6 +31,9 @@
                                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="32"/>
                                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="keyCPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vWT-pR-7aZ"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
